--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 <div class="admin-panel">
     <h2 style="text-align:center; color:var(--primary);">HF ORDER SYSTEM</h2>
     <div class="grid-layout">
-        <div class="input-box"><label>ইনভয়েস নম্বর:</label><input type="text" id="inInvoice" placeholder="AV-1" oninput="upd()"></div>
-        <div class="input-box"><label>ফাইল নাম:</label><input type="text" id="fileName" placeholder="AV-1" oninput="upd()"></div>
+        <div class="input-box"><label>ইনভয়েস নম্বর:</label><input type="text" id="inInvoice" placeholder="ফাইল নাম লিখুন" oninput="upd()"></div>
+        <div class="input-box"><label>ফাইল নাম:</label><input type="text" id="fileName" placeholder="ফাইল নাম লিখুন" oninput="upd()"></div>
         <div class="input-box"><label>অর্ডার তারিখ:</label><input type="date" id="inDate" oninput="upd()"></div>
     </div>
     <div class="grid-layout">
@@ -211,3 +211,4 @@
 </script>
 </body>
 </html>
+
