--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
             <div style="margin-top:auto;">
                 <div class="label-red">Final Quantity</div>
-                <div class="stat-val" style="font-size:42px; color:var(--primary); margin-bottom:0;">JRS: <span id="totJ">0</span></div>
-                <div class="stat-val" style="font-size:28px; color:#555;">PNT: <span id="totP">0</span></div>
+                <div class="stat-val" style="font-size:42px; color:var(--primary); margin-bottom:0;">JERSEY: <span id="totJ">0</span></div>
+                <div class="stat-val" style="font-size:28px; color:#555;">PANT: <span id="totP">0</span></div>
             </div>
         </div>
 
@@ -211,4 +211,5 @@
 </script>
 </body>
 </html>
+
 
