--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     <div class="footer">
         <div>Prepared By: <strong id="outDesigner">---</strong></div>
-        <div>HF SUBLIMATION - Official Order Sheet</div>
+        <div>Order Sheet Generator by Skyme</div>
     </div>
 </div>
 
@@ -233,3 +233,4 @@
 </script>
 </body>
 </html>
+
