--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body class="active-preview">
 
 <div class="admin-panel">
-    <h2 style="text-align:center; color:var(--primary);">HF UNIVERSAL ORDER SYSTEM</h2>
+    <h2 style="text-align:center; color:var(--primary);">SUBLIMATION ORDER SHEET Generator</h2>
     
     <div class="grid-layout">
         <div class="input-box"><label>ইনভয়েস নম্বর:</label><input type="text" id="inInvoice" placeholder="HF-101" oninput="upd()"></div>
@@ -105,7 +105,7 @@
 
     <div class="grid-layout" style="margin-top:20px">
         <div class="input-box"><label>ডিজাইন ছবি:</label><input type="file" accept="image/*" onchange="previewImg(event, 'outDesignImg')"></div>
-        <div class="input-box"><label>লিস্ট ছবি:</label><input type="file" accept="image/*" onchange="previewImg(event, 'outListImg')"></div>
+        <div class="input-box"><label>নাম-নাম্বার লিস্ট ছবি:</label><input type="file" accept="image/*" onchange="previewImg(event, 'outListImg')"></div>
     </div>
     <button class="dl-btn" onclick="downloadPDF()">Generate & Print PDF</button>
 </div>
@@ -144,8 +144,8 @@
 
             <div style="margin-top:auto;">
                 <div class="label-red">Final Quantity</div>
-                <div class="stat-val" style="font-size:35px; color:var(--primary); margin-bottom:0;"><span id="outTopFinal">JRS</span>: <span id="totJ">0</span></div>
-                <div class="stat-val" style="font-size:28px; color:#555;"><span id="outBottomFinal">PNT</span>: <span id="totP">0</span></div>
+                <div class="stat-val" style="font-size:35px; color:var(--primary); margin-bottom:0;"><span id="outTopFinal">JERSEY</span>: <span id="totJ">0</span></div>
+                <div class="stat-val" style="font-size:28px; color:#555;"><span id="outBottomFinal">PANT</span>: <span id="totP">0</span></div>
             </div>
         </div>
 
@@ -190,8 +190,8 @@
 
         document.getElementById('tableBottomHead').innerText = `${bottomType} (P)`;
         document.getElementById('outTopLabel').innerText = topType;
-        document.getElementById('outTopFinal').innerText = topType === "Jersey" ? "JRS" : "TRK";
-        document.getElementById('outBottomFinal').innerText = bottomType === "Pant" ? "PNT" : "TRS";
+        document.getElementById('outTopFinal').innerText = topType === "Jersey" ? "JERSEY" : "TRACKSUIT";
+        document.getElementById('outBottomFinal').innerText = bottomType === "Pant" ? "PANT" : "TROUSER";
 
         document.getElementById('outInvoice').innerText = document.getElementById('inInvoice').value || "---";
         document.getElementById('outFile').innerText = document.getElementById('fileName').value || "---";
@@ -240,3 +240,4 @@
 </script>
 </body>
 </html>
+
