--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     
     <div class="grid-layout">
         <div class="input-box"><label>ইনভয়েস নম্বর:</label><input type="text" id="inInvoice" placeholder="HF-101" oninput="upd()"></div>
-        <div class="input-box"><label>ফাইল নাম:</label><input type="text" id="fileName" placeholder="File Name" oninput="upd()"></div>
+        <div class="input-box"><label>প্রিন্ট মেশিন নাম:</label><input type="text" id="fileName" placeholder="File Name" oninput="upd()"></div>
         <div class="input-box"><label>অর্ডার তারিখ:</label><input type="date" id="inDate" oninput="upd()"></div>
     </div>
 
@@ -173,7 +173,7 @@
         <div style="text-align: right; font-size: 12px;">
             <div><strong>DATE:</strong> <span id="outDate">---</span></div>
             <div><strong>DELIVERY:</strong> <span id="outDel">---</span></div>
-            <div><strong>FILE:</strong> <span id="outFile">---</span></div>
+            <div><strong>Printer:</strong> <span id="outFile">---</span></div>
         </div>
     </div>
 
@@ -294,3 +294,4 @@
 </script>
 </body>
 </html>
+
