--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     
     <div class="grid-layout">
         <div class="input-box"><label>ইনভয়েস নম্বর:</label><input type="text" id="inInvoice" placeholder="HF-101" oninput="upd()"></div>
-        <div class="input-box"><label>প্রিন্ট মেশিন নাম:</label><input type="text" id="fileName" placeholder="File Name" oninput="upd()"></div>
+        <div class="input-box"><label>প্রিন্ট মেশিন নাম:</label><input type="text" id="fileName" placeholder="Machine Name" oninput="upd()"></div>
         <div class="input-box"><label>অর্ডার তারিখ:</label><input type="date" id="inDate" oninput="upd()"></div>
     </div>
 
@@ -294,4 +294,5 @@
 </script>
 </body>
 </html>
+
 
